  * fixed empty Host: + $HTTP["host"] handling (#458)
  * fixed handling of If-Modified-Since if ETag is not set 
  * fixed default-shell if SHELL is not set (#441)
  * fixed appending and assigning of env.* vars
  * fixed empty FCGI_STDERR packets
  * fixed conditional server.allow-http-11 
  * fixed handling of follow-symlink + lstat()
  * fixed SIGHUP handling if max-workers is used

- 1.4.11 - 2006-03-09

  * added ability to specify which ip address spawn-fci listens on 
    (agkr@pobox.com)
  * added mod_flv_streaming to streaming Flash Movies efficiently
  * fixed handling of error codes returned by mod_dav_svn behing a 
    mod_proxy
  * fixed error-messages in mod_auth and mod_fastcgi
  * fixed re-enabling overloaded local fastcgi backends
  * fixed handling of deleted files in linux-sendfile
  * fixed compilation on BSD and MacOSX
  * fixed $SERVER["socket"] on a already bound socket
  * fixed local source retrieval on windows 
    (secunia)
  * fixed hanging cgi if remote side is dieing while reading 
    from the pipe (sandy@meebo.com)

- 1.4.10 - 2006-02-08

  * added docs for mod_dirlisting
  * added fastcgi.map-extensions to mod_fastcgi
  * fixed load balancing for mod_fastcgi 
  * fixed extra newline for syslog() in mod_accesslog
  * fixed user-track cookie for IE in mod_usertrack
  * fixed crash in digest handling in mod_auth 
  * fixed handling of 301 response-bodies from a mod_proxy backend
  * fixed loading of base modules if server.modules is not set
  * fixed broken cgi if mod_scgi is loaded

- 1.4.9 - 2006-01-14

  * added server.core-files option (sandy <sandy@meebo.com>)
  * added docs for mod_status
  * added mod_evasive to limit the number of connections by IP (<w1zzard@techpowerup.com>)
  * added the power-magnet to mod_cml
  * added internal statistics to mod_fastcgi
  * added server.statistics-url to get internal statistics from mod_status
  * added support for conditional range-requests through If-Range